--- a/DXWebApplication/Views/Home/Employee.cshtml
+++ b/DXWebApplication/Views/Home/Employee.cshtml
@@ -86,11 +86,35 @@
     }
 
 
-
-    function onTabClick(s, e) {
-        $("#salarybatch").show
-        $("#contractbatch").show
+    function ContractBatch_OnBeginCallback(s, e) {
+        e.customArgs["isFromToolBar"] = isFromToolBar;
     }
+
+
+    var contarctRowIndex = 0;
+    function ContractBatch_OnBatchEditStartEditing(s, e) {
+        contarctRowIndex = e.visibleIndex;
+        var empid = employeeGridView.GetRowKey(employeeGridView.GetFocusedRowIndex());
+        s.batchEditApi.SetCellValue(contarctRowIndex, "HRS_EMC_EmpID", empid);
+
+        if (e.focusedColumn.fieldName == "HRS_EMC_Number") {
+            var num = ContractBatch.batchEditApi.GetCellValue(contarctRowIndex, "HRS_EMC_Number", false);
+            if (num == null || num <= 0) {
+                var arr = ContractBatch.batchEditApi.GetRowVisibleIndices();
+                var max = ContractBatch.batchEditApi.GetCellValue(arr[0], "HRS_EMC_Number", false);
+                for (var i = 1; i < arr.length; i++) {
+                    var number = ContractBatch.batchEditApi.GetCellValue(arr[i], "HRS_EMC_Number", false);
+                    if (number > max) {
+                        max = number;
+                    }
+                }
+                ContractBatch.batchEditApi.SetCellValue(contarctRowIndex, "HRS_EMC_Number", max + 1);
+            }
+            e.cancel = true;
+        }
+    }
+
+
 </script>
 
 
