add sessions proparty

--- a/DXWebApplication/Views/Home/_PartialExternalEditForm.cshtml
+++ b/DXWebApplication/Views/Home/_PartialExternalEditForm.cshtml
@@ -15,6 +15,7 @@
 {
     flSettings.Name = "ExternalEdit";
     flSettings.ColCount = 4;
+    flSettings.Width = Unit.Percentage(100);
 
     flSettings.Items.Add(i =>
     {
