department model as tree list

--- a/DXWebApplication/Views/Shared/_Layout.cshtml
+++ b/DXWebApplication/Views/Shared/_Layout.cshtml
@@ -38,6 +38,7 @@
                     <li>@Html.ActionLink("Employee", "Employee", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Job", "Jobs", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                     <li>@Html.ActionLink("Work Status", "WorkStatus", "Home", new { area = "" }, new { @class = "nav-link" })</li>
+                    <li>@Html.ActionLink("Department", "Department", "Home", new { area = "" }, new { @class = "nav-link" })</li>
                 </ul>
             </div>
         </div>
