--- a/DXWebApplication/Views/Home/_PartialDepartmentGridView.cshtml
+++ b/DXWebApplication/Views/Home/_PartialDepartmentGridView.cshtml
@@ -10,9 +10,9 @@
         settings.Name = "DepartmentTreeList";
         settings.CallbackRouteValues = new { Controller = "Home", Action = "PartialDepartmentGridView" };
         settings.SettingsEditing.AddNewNodeRouteValues = new { Controller = "Home", Action = "PartialDepartmentAddNew" };
-        settings.SettingsEditing.UpdateNodeRouteValues = new { Controller = "Home", Action = "PartialDepartmentUpdatePost" };
-        settings.SettingsEditing.NodeDragDropRouteValues = new { Controller = "Home", Action = "PartialDepartmentMovePost" };
-        settings.SettingsEditing.DeleteNodeRouteValues = new { Controller = "Home", Action = "PartialDepartmentDeletePost" };
+        settings.SettingsEditing.UpdateNodeRouteValues = new { Controller = "Home", Action = "PartialDepartmentUpdate" };
+        settings.SettingsEditing.NodeDragDropRouteValues = new { Controller = "Home", Action = "PartialDepartmentMove" };
+        settings.SettingsEditing.DeleteNodeRouteValues = new { Controller = "Home", Action = "PartialDepartmentDelete" };
         settings.SettingsEditing.ConfirmDelete = true;
         settings.Settings.GridLines = GridLines.Both;
         settings.SettingsBehavior.ExpandCollapseAction = TreeListExpandCollapseAction.NodeDblClick;
@@ -52,7 +52,20 @@
             c.Caption = "Phone";
         });
 
+        settings.PreRender = (sender, e) =>
+        {
+            MVCxTreeList treeListControl = (MVCxTreeList)sender;
+            treeListControl.ExpandToLevel(3);
+            treeListControl.StartEdit("2");
+        };
+        settings.CellEditorInitialize = (sender, e) =>
+        {
+            var editor = e.Editor as ASPxEdit;
+            editor.ValidationSettings.Display = Display.Dynamic;
+        };
+
     });
+
 }
 
 @treeList.Bind(Model).GetHtml()
