--- a/DXWebApplication/Views/Home/_PartialDepartmentGridView.cshtml
+++ b/DXWebApplication/Views/Home/_PartialDepartmentGridView.cshtml
@@ -51,7 +51,7 @@
         });
         settings.Columns.Add(c =>
         {
-            c.FieldName = "DEP_Phone";
+            c.FieldName = "DEP_PhoneNum";
             c.Caption = "Phone";
         });
 
