--- a/DXWebApplication/Views/Home/_PartialDepartmentTreeListEditForm.cshtml
+++ b/DXWebApplication/Views/Home/_PartialDepartmentTreeListEditForm.cshtml
@@ -39,7 +39,7 @@
         i.ShowCaption = DefaultBoolean.False;
         i.SetNestedContent(() =>
         {
-            ViewContext.Writer.Write("<div style='float:right'> ");
+            ViewContext.Writer.Write("<div style='float:left'> ");
             Html.DevExpress().Button(btnSettings =>
             {
                 btnSettings.Name = "depUpdate";
