add department to the employee

--- a/DXWebApplication/Views/Home/_PartialExternalEditForm.cshtml
+++ b/DXWebApplication/Views/Home/_PartialExternalEditForm.cshtml
@@ -87,6 +87,23 @@
     });
     flSettings.Items.Add(i =>
     {
+        i.FieldName = "DEP_Departments";
+        i.Caption = "Department";
+        i.NestedExtension().ComboBox(combobox =>
+        {
+            combobox.Properties.TextField = "DEP_Name";
+            combobox.Properties.ValueField = "DEP_ID";
+            combobox.Properties.ValueType = typeof(int);
+            combobox.Properties.DataSource = DXWebApplication.Models.DEP_Departments.Get();
+            combobox.Properties.ValidationSettings.RequiredField.IsRequired = true;
+            combobox.Properties.ValidationSettings.ErrorDisplayMode = ErrorDisplayMode.ImageWithTooltip;
+            combobox.Properties.ValidationSettings.Display = Display.Dynamic;
+            combobox.ShowModelErrors = true;
+            combobox.Width = Unit.Percentage(100);
+        });
+    });
+    flSettings.Items.Add(i =>
+    {
         i.FieldName = "ACC_EMP_Gender";
         i.Caption = "Gender";
         i.NestedExtension().ComboBox(combobox =>
